master/target/generated-sources/antlr4/compiladores/Translate_ProjectCompi/traductorParser.java
// Generated from traductor.g4 by ANTLR 4.4
package compiladores.Translate_ProjectCompi;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class traductorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ABST_NOUNS=1, CONC_NOUNS=2, COM_NOUNS=3, PLACES=4, UNCOUNT_NOUNS=5, POSS_ADJ=6, 
		ADJ=7, DEMOST_ADJ=8, CAL_CMN_ADJ=9, CAL_COLOR_ADJ=10, CAL_CONDITION_ADJ=11, 
		CAL_PERSONALITY_POSITIVE_ADJ=12, CAL_PERSONALITY_NEGATIVE_ADJ=13, CAL_SHAPE_ADJ=14, 
		CAL_SIZE_ADJ=15, CAL_SOUND_ADJ=16, CAL_TIME_ADJ=17, CAL_TASTETOUCH_ADJ=18, 
		CAL_TOUCH_ADJ=19, CAL_QUANTITY_ADJ=20, ORD_NUMBERS=21, CARD_NUMBERS=22, 
		UND_ADJ=23, ART_DEF=24, ART_INDEF=25, PER_PRONOUNS=26, DEM_PRONOUN=27, 
		INTERR_PRONOUNS=28, REG_VERBS=29, IRRE_VERBS=30, PAST_PARTICIPLE_VERBS_IRREGULAR=31, 
		PAST_PARTICIPLE_REGULAR_VERBS=32, ADV_TIME=33, ADV_PLACE=34, ADV_QUANTITY=35, 
		ADV_MODE=36, AFFIRM_ADVERBS=37, NEG_ADVERBS=38, ADV_DOUBT=39, GERUNDS=40, 
		PREPS=41, TO_BE=42, TO_BE_NEG=43, CONJ=44, CONJ_COP=45, CONJ_ADV=46, CONJ_DIST=47, 
		CONJ_DISYU=48, CONJ_EXPLI=49, CONJU_SUB=50, COORD_CONJUNCTIONS=51, CONJ_CON=52, 
		CONJ_CAS=53, CONJ_CONSE=54, CONJ_COMP=55, CONJ_FIN=56, INTERJECT=57, SIGNS=58, 
		DO=59, DOES=60, WOULD=61, CAN=62, SHOULD=63, HAVE=64, HAS=65, AUXDONT=66, 
		WOULDNT=67, CANT=68, SHOULDNT=69, AUXHAVE=70, WS=71;
	public static final String[] tokenNames = {
		"<INVALID>", "ABST_NOUNS", "CONC_NOUNS", "COM_NOUNS", "PLACES", "UNCOUNT_NOUNS", 
		"POSS_ADJ", "ADJ", "DEMOST_ADJ", "CAL_CMN_ADJ", "CAL_COLOR_ADJ", "CAL_CONDITION_ADJ", 
		"CAL_PERSONALITY_POSITIVE_ADJ", "CAL_PERSONALITY_NEGATIVE_ADJ", "CAL_SHAPE_ADJ", 
		"CAL_SIZE_ADJ", "CAL_SOUND_ADJ", "CAL_TIME_ADJ", "CAL_TASTETOUCH_ADJ", 
		"CAL_TOUCH_ADJ", "CAL_QUANTITY_ADJ", "ORD_NUMBERS", "CARD_NUMBERS", "UND_ADJ", 
		"'the'", "ART_INDEF", "PER_PRONOUNS", "DEM_PRONOUN", "INTERR_PRONOUNS", 
		"REG_VERBS", "IRRE_VERBS", "PAST_PARTICIPLE_VERBS_IRREGULAR", "PAST_PARTICIPLE_REGULAR_VERBS", 
		"ADV_TIME", "ADV_PLACE", "ADV_QUANTITY", "ADV_MODE", "AFFIRM_ADVERBS", 
		"NEG_ADVERBS", "ADV_DOUBT", "GERUNDS", "PREPS", "TO_BE", "TO_BE_NEG", 
		"CONJ", "CONJ_COP", "CONJ_ADV", "CONJ_DIST", "'or'", "CONJ_EXPLI", "CONJU_SUB", 
		"COORD_CONJUNCTIONS", "CONJ_CON", "CONJ_CAS", "CONJ_CONSE", "CONJ_COMP", 
		"CONJ_FIN", "INTERJECT", "SIGNS", "'do'", "'does'", "'would'", "'can'", 
		"'should'", "'have'", "'has'", "AUXDONT", "WOULDNT", "CANT", "SHOULDNT", 
		"AUXHAVE", "WS"
	};
	public static final int
		RULE_oracion = 0, RULE_present_s = 1, RULE_present_c = 2, RULE_sentence_p = 3, 
		RULE_sentence_aux = 4, RULE_simple_presentneg = 5, RULE_present_contneg = 6, 
		RULE_part_sentneg = 7, RULE_aux_sentneg = 8, RULE_aux_neg = 9, RULE_aux_have_neg = 10, 
		RULE_auxdont = 11, RULE_adjetives = 12, RULE_tobe_neg = 13, RULE_articles = 14, 
		RULE_past_part = 15, RULE_nouns_sp = 16, RULE_verbs = 17, RULE_compl = 18, 
		RULE_aux_h = 19, RULE_aux = 20, RULE_per_pro = 21, RULE_to_be = 22, RULE_verbsg = 23;
	public static final String[] ruleNames = {
		"oracion", "present_s", "present_c", "sentence_p", "sentence_aux", "simple_presentneg", 
		"present_contneg", "part_sentneg", "aux_sentneg", "aux_neg", "aux_have_neg", 
		"auxdont", "adjetives", "tobe_neg", "articles", "past_part", "nouns_sp", 
		"verbs", "compl", "aux_h", "aux", "per_pro", "to_be", "verbsg"
	};

	@Override
	public String getGrammarFileName() { return "traductor.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public traductorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class OracionContext extends ParserRuleContext {
		public Sentence_pContext sentence_p() {
			return getRuleContext(Sentence_pContext.class,0);
		}
		public Simple_presentnegContext simple_presentneg() {
			return getRuleContext(Simple_presentnegContext.class,0);
		}
		public Aux_sentnegContext aux_sentneg() {
			return getRuleContext(Aux_sentnegContext.class,0);
		}
		public Present_cContext present_c() {
			return getRuleContext(Present_cContext.class,0);
		}
		public Present_contnegContext present_contneg() {
			return getRuleContext(Present_contnegContext.class,0);
		}
		public Part_sentnegContext part_sentneg() {
			return getRuleContext(Part_sentnegContext.class,0);
		}
		public Sentence_auxContext sentence_aux() {
			return getRuleContext(Sentence_auxContext.class,0);
		}
		public Present_sContext present_s() {
			return getRuleContext(Present_sContext.class,0);
		}
		public OracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof traductorListener ) ((traductorListener)listener).enterOracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof traductorListener ) ((traductorListener)listener).exitOracion(this);
		}
	}

	public final OracionContext oracion() throws RecognitionException {
		OracionContext _localctx = new OracionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_oracion);
		try {
			setState(56);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(48); present_s();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(49); present_c();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(50); sentence_aux();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(51); sentence_p();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(52); simple_presentneg();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(53); present_contneg();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(54); part_sentneg();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(55); aux_sentneg();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Present_sContext extends ParserRuleContext {
		public VerbsContext verbs() {
			return getRuleContext(VerbsContext.class,0);
		}
		public ArticlesContext articles() {
			return getRuleContext(ArticlesContext.class,0);
		}
		public TerminalNode POSS_ADJ() { return getToken(traductorParser.POSS_ADJ, 0); }
		public ComplContext compl() {
			return getRuleContext(ComplContext.class,0);
		}
		public Nouns_spContext nouns_sp() {
			return getRuleContext(Nouns_spContext.class,0);
		}
		public Per_proContext per_pro() {
			return getRuleContext(Per_proContext.class,0);
		}
		public Present_sContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_present_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof traductorListener ) ((traductorListener)listener).enterPresent_s(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof traductorListener ) ((traductorListener)listener).exitPresent_s(this);
		}
	}

	public final Present_sContext present_s() throws RecognitionException {
		Present_sContext _localctx = new Present_sContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_present_s);
		int _la;
		try {
			setState(75);
			switch (_input.LA(1)) {
			case ART_DEF:
			case ART_INDEF:
				enterOuterAlt(_localctx, 1);
				{
				setState(58); articles();
				setState(59); nouns_sp();
				setState(60); verbs();
				setState(62);
				_la = _input.LA(1);
				if (_la==PREPS) {
					{
					setState(61); compl();
					}
				}

				}
				break;
			case POSS_ADJ:
				enterOuterAlt(_localctx, 2);
				{
				setState(64); match(POSS_ADJ);
				setState(65); nouns_sp();
				setState(66); verbs();
				setState(68);
				_la = _input.LA(1);
				if (_la==PREPS) {
					{
					setState(67); compl();
					}
				}

				}
				break;
			case PER_PRONOUNS:
				enterOuterAlt(_localctx, 3);
				{
				setState(70); per_pro();
				setState(71); verbs();
				setState(73);
				_la = _input.LA(1);
				if (_la==PREPS) {
					{
					setState(72); compl();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Present_cContext extends ParserRuleContext {
		public AdjetivesContext adjetives() {
			return getRuleContext(AdjetivesContext.class,0);
		}
		public To_beContext to_be() {
			return getRuleContext(To_beContext.class,0);
		}
		public ArticlesContext articles() {
			return getRuleContext(ArticlesContext.class,0);
		}
		public TerminalNode POSS_ADJ() { return getToken(traductorParser.POSS_ADJ, 0); }
		public TerminalNode ADJ() { return getToken(traductorParser.ADJ, 0); }
		public ComplContext compl() {
			return getRuleContext(ComplContext.class,0);
		}
		public TerminalNode ART_INDEF() { return getToken(traductorParser.ART_INDEF, 0); }
		public VerbsgContext verbsg() {
			return getRuleContext(VerbsgContext.class,0);
		}
		public Per_proContext per_pro() {
			return getRuleContext(Per_proContext.class,0);
		}
		public Nouns_spContext nouns_sp() {
			return getRuleContext(Nouns_spContext.class,0);
		}
		public TerminalNode CONC_NOUNS() { return getToken(traductorParser.CONC_NOUNS, 0); }
		public Present_cContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_present_c; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof traductorListener ) ((traductorListener)listener).enterPresent_c(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof traductorListener ) ((traductorListener)listener).exitPresent_c(this);
		}
	}

	public final Present_cContext present_c() throws RecognitionException {
		Present_cContext _localctx = new Present_cContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_present_c);
		int _la;
		try {
			setState(128);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77); per_pro();
				setState(78); to_be();
				setState(79); verbsg();
				setState(81);
				_la = _input.LA(1);
				if (_la==PREPS) {
					{
					setState(80); compl();
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83); articles();
				setState(84); nouns_sp();
				setState(85); to_be();
				setState(86); verbsg();
				setState(88);
				_la = _input.LA(1);
				if (_la==PREPS) {
					{
					setState(87); compl();
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(90); match(POSS_ADJ);
				setState(91); nouns_sp();
				setState(92); to_be();
				setState(93); verbsg();
				setState(95);
				_la = _input.LA(1);
				if (_la==PREPS) {
					{
					setState(94); compl();
					}
				}
